# gnome47-alpha-wallpapers

./: README.md  gnome47-alpha-wallpapers.doap  meson.build  meson_options.txt
.github/workflows/: master.yml
backgrounds/gnome/: meson.build
backgrounds/gnome47-alpha/: meson.build
